--- a/Table.html
+++ b/Table.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>TABLES</h1>
-    <table border="1" width="1500" height="50">
+    <table border="1" width="100%">
         <thead>
             <th>Firstname</th>
             <th>Lasttname</th>
@@ -38,7 +38,7 @@
             <td></td>
         </tr>
         </table><br><br>
-        <table border="1" width="1500" height="50">
+        <table border="1" width="100%">
             <tr>
                 <th>Course</th>
                 <td>Elevation Academy</td>
@@ -53,7 +53,7 @@
         </table>
         <br>
         <br>
-        <table border="1" width="1500" height="50">
+        <table width="100%" border="1">
             <tr>
                 <th>Course</th>
                 <th colspan="2">Contact Number</th>
@@ -74,18 +74,18 @@
                     <td>2 August 2020</td>
                 </tr>
         </table><br>
-        <table border="1" align="center" width="100">
+        <table border="1" align="center">
             <tr>
-                <td bgcolor="LightGray"><b>Name</b></td>
+                <td bgcolor="LightGray">Name</td>
                 <td>John</td>
-                <td bgcolor="LightGray"><b>Nick</b></td>
+                <td bgcolor="LightGray">Nick</td>
                 <td>Tim</td> 
             </tr>
             <tr>
                 <td> Age</td>
-                <td bgcolor="LightGray"><b>30</b></td>
+                <td bgcolor="LightGray">30</td>
                 <td>20</td>
-                <td bgcolor="LightGray"><b>35</b></td>
+                <td bgcolor="LightGray">35</td>
             </tr>
         </table><br>
         <a href="./index.html"><u>Go back</u></a>
