--- a/msg.html
+++ b/msg.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Submission</title>
 </head>
 <body>
-    <h2>Form submitted successfully</h2>
-    name=Anusha&<br>
-    Email=akhilakasthuri1999%40gmail.com&<br>
-    Password=1234&<br>
-    Language=React<br>
-    &course1=MERN&course2=MEAN&<br>
-    Course=Back+End&<br>
-    description=random+text+area&<br>
-    Phone=123456789<br>
+    <h2>Check URL to see from Data</h2>
 </body>
 </html>
